@@ -5,6 +5,8 @@ linux (4.6.1-2) UNRELEASED; urgency=medium
   * Move merge_packages function from debian/bin/gencontrol.py to
     gencontrol module
   * udeb: Drop packages for modules that will later be signed
+  * linux-image: Add '-unsigned' suffix to packages with modules that will
+    later be signed
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 07 Jun 2016 19:37:55 +0100
 
